# cpc

./: .clangd  CMakeLists.txt  README.md  com.cp  langInfo.txt  run.sh  test.cp  test.txt
cpc/: CMakeLists.txt  cpc.cpp  langSpec.hpp  langSpecs.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp
cpc/c:3/: main.c
cpc/c:3/aux/: hstring.c  hstring.h
cpc/c:3/lexer/: lexer.c  lexer.h
